Name:		Planning
Version:	0.2
Cabal-Version:  >= 1.2
Build-Type:     Simple
License:	BSD3
License-File:	LICENSE
Author:		Ron Alford
Homepage:	http://www.cs.umd.edu/~ronwalf/software/planning/
Category:	AI
Synopsis:	A library for parsing and representing planning languages
Build-Depends:        base

Executable pddlcheck
    Main-Is: pddlcheck.hs
    Build-Depends:
    Hs-Source-Dirs: src
    GHC-Options:
        -O -Wall

Library
  Hs-Source-Dirs: src
  Build-Depends:
        base >= 4.0.0.0 && < 5.0.0.0,
        parsec >= 3 && < 4,
        pretty >= 1.0.1.0 && < 2,
        syb >= 0.2 && < 0.4
  Exposed-modules:
        Planning.Expressions, Planning.Records, Planning.Util, Planning.Wouter,
        Planning.PDDL.PDDL3_0, Planning.PDDL.Parser,
        Planning.PDDL.Representation, 
        Planning.PDDL.Pond, Planning.PDDL.NDPDDL, Planning.PDDL.FF
  ghc-options:
        -O -Wall
