Name:		Planning
Version:	0.1
Cabal-Version:  >= 1.2
Build-Type:     Simple
License:	BSD3
License-File:	LICENSE
Author:		Ron Alford
Homepage:	http://www.cs.umd.edu/~ronwalf/software/planning/
Category:	AI
Synopsis:	A library for parsing and representing planning languages
Build-Depends:        base

Executable pddlcheck
    Main-Is: pddlcheck.hs
    Build-Depends:
    GHC-Options:
        -O -Wall

Library
  Build-Depends:
        base >= 4.0.0.0 && < 5.0.0.0,
        parsec >= 2.1.0.1 && < 3,
        pretty >= 1.0.1.0 && < 2,
        syb >= 0.1 && < 0.2
  Exposed-modules:
        Planning.Expressions, Planning.Records, Planning.Util, Planning.Wouter,
        Planning.PDDL.PDDL3_0, Planning.PDDL.Parser,
        Planning.PDDL.Representation, 
        Planning.PDDL.Pond, Planning.PDDL.NDPDDL, Planning.PDDL.FF
  ghc-options:
        -O -Wall
