Name:		planning
Description: A type-safe, extensible PDDL parsing and representation library.
Version:	0.2.1
Cabal-Version:  >= 1.8
Build-Type:     Simple
License:	BSD3
License-File:	LICENSE
Author: Ron Alford <ronwalf@volus.net>
Maintainer: Ron Alford <ronwalf@volus.net>
Homepage:	https://github.com/ronwalf/Planning
Category:	AI, Planning
Synopsis:	A library for parsing and representing planning languages

source-repository head
    type:   git
    location: git://github.com/ronwalf/Planning.git
    branch: master

source-repository this
    type:   git
    location: git://github.com/ronwalf/Planning.git
    tag: release-0.2

Library
  Hs-Source-Dirs: src
  Build-Depends:
        base >= 4 && < 5,
        parsec >= 3,
        pretty >= 1.0.1.0,
        syb >= 0.2
  Exposed-modules:
        Planning.Expressions, Planning.Records, Planning.Util, Planning.Wouter,
        Planning.PDDL.PDDL3_0, Planning.PDDL.Parser,
        Planning.PDDL.Representation, 
        Planning.PDDL.Pond, Planning.PDDL.NDPDDL, Planning.PDDL.FF
  ghc-options:
        -Wall

Executable pddlcheck
    Main-Is: pddlcheck.hs
    Build-Depends:
        base >= 4 && < 5,
        parsec >= 3,
        pretty >= 1.0.1.0,
        planning
    Hs-Source-Dirs: src-cmdline
    GHC-Options: -Wall 


